--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "highcharts": "^8.2.2",
-    "highcharts-react-official": "^3.0.0",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "vis": "^4.21.0-EOL"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
