--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "next": "^10.0.0",
     "nookies": "^2.5.2",
     "react": "16.13.1",
