--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
-    "next": "^10.0.0",
+    "next": "^11.0.1",
     "nookies": "^2.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "vis": "^4.21.0-EOL"
   },
   "devDependencies": {
