--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,10 @@
-build/
-node_modules/
-internals/generators/
-internals/scripts/
+build
+node_modules
+internals/generators
+internals/scripts
 package-lock.json
 yarn.lock
 package.json
+coverage
+doc
+dist
