--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "arrowParens": "always",
+  "tabWidth": 4,
+  "printWidth": 120
 }
