--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "axios": "^0.21.1",
     "dagre": "^0.8.5",
     "lodash": "^4.17.21",
@@ -33,6 +35,8 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.35",
     "add-asset-html-webpack-plugin": "^3.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
@@ -52,6 +56,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.5.2"
   }
 }
