--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.6.11",
     "styled-components": "^5.3.0",
     "vis": "^4.21.0-EOL"
   },
@@ -35,8 +36,11 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
+    "@types/dagre": "^0.7.46",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
+    "@types/styled-components": "^5.1.15",
+    "@types/vis": "^4.21.22",
     "add-asset-html-webpack-plugin": "^3.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
