Position by graphology-no-overlap

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@typescript-eslint/parser": "^5.4.0",
     "axios": "^0.21.1",
     "dagre": "^0.8.5",
+    "graphology": "^0.23.1",
+    "graphology-layout-force": "^0.2.3",
+    "graphology-layout-noverlap": "^0.4.1",
     "lodash": "^4.17.21",
     "next": "^11.0.1",
     "nookies": "^2.5.2",
@@ -37,6 +40,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@types/dagre": "^0.7.46",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/styled-components": "^5.1.15",
